# rlm-skill

./: .gitignore  BENCHMARK.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: bump-version.yml  ci.yml  release.yml
.opencode/: package-lock.json  package.json
.opencode/agents/: rlm.md
.opencode/commands/: rlm-stats.md  rlm.md
.opencode/plugins/: rlm-executor.ts  rlm-interceptor.ts  rlm-store.ts
docs/plans/: 2026-03-05-opencode-plugin-v2.md
hooks/: hooks.json  pretooluse-rlm.mjs
mcp/: package-lock.json  package.json  server.mjs  store.mjs
skills/rlm/: SKILL.md
skills/stats/: SKILL.md
src/: cli.py  fetch.py  stats.py
tests/: test_plugin_structure.py  test_stats.py
